maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: value Random3
		Random3() match{
                ^